# backend/src/main/java/com/form/org/validator/DetailResultatValidator.java
@@ -25,9 +25,45 @@ public class DetailResultatValidator {
 			errors.add("veuillez renseigner la description!!");
 		}
 		
-		if(detailResultatDTO.getValeur()==null) {
-			errors.add("veuillez renseigner la valeur!!");
+		if(detailResultatDTO.getValeur1()==null) {
+			errors.add("veuillez renseigner la valeur1!!");
 				
+		}
+		if(detailResultatDTO.getValeur2()==null) {
+			errors.add("veuillez renseigner la valeur2!!");
+
+		}
+		if(detailResultatDTO.getValeur3()==null) {
+			errors.add("veuillez renseigner la valeur3!!");
+
+		}
+		if(detailResultatDTO.getValeur4()==null) {
+			errors.add("veuillez renseigner la valeur4!!");
+
+		}
+		if(detailResultatDTO.getValeur5()==null) {
+			errors.add("veuillez renseigner la valeur5!!");
+
+		}
+		if(detailResultatDTO.getValeur6()==null) {
+			errors.add("veuillez renseigner la valeur6!!");
+
+		}
+		if(detailResultatDTO.getValeur7()==null) {
+			errors.add("veuillez renseigner la valeur7!!");
+
+		}
+		if(detailResultatDTO.getValeur8()==null) {
+			errors.add("veuillez renseigner la valeur8!!");
+
+		}
+		if(detailResultatDTO.getValeur9()==null) {
+			errors.add("veuillez renseigner la valeur9!!");
+
+		}
+		if(detailResultatDTO.getValeur10()==null) {
+			errors.add("veuillez renseigner la valeur10!!");
+
 		}
 		
 		if(detailResultatDTO.getBiologiste()==null) {
